--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,7 +74,7 @@ Jessie build:
   script:
     - time "$SOURCE_DIR/buildenv" --pick-build-tree --branch "$CI_BUILD_REF_NAME" --link-build-tree "$BUILD_DIR" --build-trees-root "/cache/$CI_PROJECT_NAME"
     - if test -n "$FROM_SCRATCH"; then dir=$(realpath $BUILD_DIR); rm -rf "$dir" && mkdir -p "$dir"; else time "$SOURCE_DIR/buildenv" --cache-download-build-tree --exclude='*.deb,*.rpm,*.tbz' --branch "$CI_BUILD_REF_NAME" --build-trees-root "/cache/$CI_PROJECT_NAME" --cache-namespace "$CI_RUNNER_DESCRIPTION/$CI_PROJECT_NAME" --cache-id "$CI_RUNNER_ID" --verbose; fi
-    - mkdir -p "$INSTALL_DIR"
+    - mkdir -p "${BUILD_DIR}"
     - farm/configure --arch x86_64 --os jessie --compiler gcc4 --project Elle --source-dir "$SOURCE_DIR" --build-dir "$BUILD_DIR" --install-dir "$INSTALL_DIR"
     - cd "$BUILD_DIR"
     - python3 drake -j $(nproc) //build //tests
@@ -91,7 +91,7 @@ Jessie test:
   script:
     - time "$SOURCE_DIR/buildenv" --pick-build-tree --branch "$CI_BUILD_REF_NAME" --link-build-tree "$BUILD_DIR" --build-trees-root "/cache/$CI_PROJECT_NAME"
     - time "$SOURCE_DIR/buildenv" --cache-download-build-tree --exclude='*.deb,*.rpm,*.tbz' --branch "$CI_BUILD_REF_NAME" --build-trees-root "/cache/$CI_PROJECT_NAME" --cache-namespace "$CI_RUNNER_DESCRIPTION/$CI_PROJECT_NAME" --cache-id "$CI_RUNNER_ID" --verbose
-    - cd "$BUILD_DIR"
+    - cd "${BUILD_DIR}"
     - python3 drake -j $(nproc) //check
     - time "$SOURCE_DIR/buildenv" --cache-upload-build-tree --exclude='*.deb,*.rpm,*.tbz' --branch "$CI_BUILD_REF_NAME" --build-trees-root "/cache/$CI_PROJECT_NAME" --cache-namespace "$CI_RUNNER_DESCRIPTION/$CI_PROJECT_NAME" --cache-id "$CI_RUNNER_ID" --verbose
   tags:
@@ -106,7 +106,8 @@ Jessie install:
   script:
     - time "$SOURCE_DIR/buildenv" --pick-build-tree --branch "$CI_BUILD_REF_NAME" --link-build-tree "$BUILD_DIR" --build-trees-root "/cache/$CI_PROJECT_NAME"
     - time "$SOURCE_DIR/buildenv" --cache-download-build-tree --exclude='*.deb,*.rpm,*.tbz' --branch "$CI_BUILD_REF_NAME" --build-trees-root "/cache/$CI_PROJECT_NAME" --cache-namespace "$CI_RUNNER_DESCRIPTION/$CI_PROJECT_NAME" --cache-id "$CI_RUNNER_ID" --verbose
-    - cd "$BUILD_DIR"
+    - mkdir -p "${INSTALL_DIR}"
+    - cd "${BUILD_DIR}"
     - python3 drake -j $(nproc) //install
     - TARBALL="$BUILD_DIR/elle-x86_64-jessie-gcc4-$DESC.tbz"
     - tar $TARFLAGS -cjf "$TARBALL" -C "$INSTALL_DIR" . --show-transformed-names --transform "s,^\\./,elle-$DESC/,"
@@ -118,27 +119,55 @@ Jessie install:
     - jessie
     - gcc4
 
-# x86_64-alpine-gcc:
-#   stage: build
-#   script:
-#     - time "$SOURCE_DIR/buildenv" --pick-build-tree --branch "$CI_BUILD_REF_NAME" --link-build-tree "$BUILD_DIR" --build-trees-root "/cache/$CI_PROJECT_NAME"
-#     - if test -n "$FROM_SCRATCH"; then dir=$(realpath $BUILD_DIR); rm -rf "$dir" && mkdir -p "$dir"; else time "$SOURCE_DIR/buildenv" --cache-download-build-tree --exclude='*.deb,*.rpm,*.tbz' --branch "$CI_BUILD_REF_NAME" --build-trees-root "/cache/$CI_PROJECT_NAME" --cache-namespace "$CI_RUNNER_DESCRIPTION/$CI_PROJECT_NAME" --cache-id "$CI_RUNNER_ID" --verbose; fi
-#     - mkdir -p "${BUILD_DIR}" "${INSTALL_DIR}"
-#     - farm/configure --arch x86_64 --os alpine --compiler gcc4 --project Elle --source-dir "$SOURCE_DIR" --build-dir "$BUILD_DIR" --install-dir "$INSTALL_DIR"
-#     - cd "$BUILD_DIR"
-#     - python3 drake -j $(nproc) //build
-#     - python3 drake -j $(nproc) //check
-#     - python3 drake -j $(nproc) //install
-#     - TARBALL="$BUILD_DIR/elle-x86_64-alpine-gcc-$DESC.tbz"
-#     - tar $TARFLAGS -cjf "$TARBALL" -C "$INSTALL_DIR" . --show-transformed-names --transform "s,^\\./,elle-$DESC/,"
-#     - scp "$TARBALL" buildslave@packages.infinit.sh:tmp
-#     - rm "$TARBALL"
-#     - cd "$SOURCE_DIR"
-#     - time "$SOURCE_DIR/buildenv" --cache-upload-build-tree --exclude='*.deb,*.rpm,*.tbz' --branch "$CI_BUILD_REF_NAME" --build-trees-root "/cache/$CI_PROJECT_NAME" --cache-namespace "$CI_RUNNER_DESCRIPTION/$CI_PROJECT_NAME" --cache-id "$CI_RUNNER_ID" --verbose
-#   tags:
-#     - x86_64
-#     - alpine
-#     - gcc
+Alpine build:
+  stage: build
+  script:
+    - time "$SOURCE_DIR/buildenv" --pick-build-tree --branch "$CI_BUILD_REF_NAME" --link-build-tree "$BUILD_DIR" --build-trees-root "/cache/$CI_PROJECT_NAME"
+    - if test -n "$FROM_SCRATCH"; then dir=$(realpath $BUILD_DIR); rm -rf "$dir" && mkdir -p "$dir"; else time "$SOURCE_DIR/buildenv" --cache-download-build-tree --exclude='*.deb,*.rpm,*.tbz' --branch "$CI_BUILD_REF_NAME" --build-trees-root "/cache/$CI_PROJECT_NAME" --cache-namespace "$CI_RUNNER_DESCRIPTION/$CI_PROJECT_NAME" --cache-id "$CI_RUNNER_ID" --verbose; fi
+    - mkdir -p "${BUILD_DIR}"
+    - farm/configure --arch x86_64 --os alpine --compiler gcc4 --project Elle --source-dir "$SOURCE_DIR" --build-dir "$BUILD_DIR" --install-dir "$INSTALL_DIR"
+    - cd "$BUILD_DIR"
+    - python3 drake -j $(nproc) //build //tests
+    - time "$SOURCE_DIR/buildenv" --cache-upload-build-tree --exclude='*.deb,*.rpm,*.tbz' --branch "$CI_BUILD_REF_NAME" --build-trees-root "/cache/$CI_PROJECT_NAME" --cache-namespace "$CI_RUNNER_DESCRIPTION/$CI_PROJECT_NAME" --cache-id "$CI_RUNNER_ID" --verbose
+  tags:
+    - x86_64
+    - alpine
+    - gcc
+
+Alpine test:
+  stage: test
+  dependencies:
+    - Alpine build
+  script:
+    - time "$SOURCE_DIR/buildenv" --pick-build-tree --branch "$CI_BUILD_REF_NAME" --link-build-tree "$BUILD_DIR" --build-trees-root "/cache/$CI_PROJECT_NAME"
+    - time "$SOURCE_DIR/buildenv" --cache-download-build-tree --exclude='*.deb,*.rpm,*.tbz' --branch "$CI_BUILD_REF_NAME" --build-trees-root "/cache/$CI_PROJECT_NAME" --cache-namespace "$CI_RUNNER_DESCRIPTION/$CI_PROJECT_NAME" --cache-id "$CI_RUNNER_ID" --verbose
+    - cd "${BUILD_DIR}"
+    - python3 drake -j $(nproc) //check
+    - time "$SOURCE_DIR/buildenv" --cache-upload-build-tree --exclude='*.deb,*.rpm,*.tbz' --branch "$CI_BUILD_REF_NAME" --build-trees-root "/cache/$CI_PROJECT_NAME" --cache-namespace "$CI_RUNNER_DESCRIPTION/$CI_PROJECT_NAME" --cache-id "$CI_RUNNER_ID" --verbose
+  tags:
+    - x86_64
+    - alpine
+    - gcc
+
+Alpine install:
+  stage: install
+  dependencies:
+    - Alpine test
+  script:
+    - time "$SOURCE_DIR/buildenv" --pick-build-tree --branch "$CI_BUILD_REF_NAME" --link-build-tree "$BUILD_DIR" --build-trees-root "/cache/$CI_PROJECT_NAME"
+    - time "$SOURCE_DIR/buildenv" --cache-download-build-tree --exclude='*.deb,*.rpm,*.tbz' --branch "$CI_BUILD_REF_NAME" --build-trees-root "/cache/$CI_PROJECT_NAME" --cache-namespace "$CI_RUNNER_DESCRIPTION/$CI_PROJECT_NAME" --cache-id "$CI_RUNNER_ID" --verbose
+    - mkdir -p "${INSTALL_DIR}"
+    - cd "${BUILD_DIR}"
+    - python3 drake -j $(nproc) //install
+    - TARBALL="$BUILD_DIR/elle-x86_64-alpine-gcc-$DESC.tbz"
+    - tar $TARFLAGS -cjf "$TARBALL" -C "$INSTALL_DIR" . --show-transformed-names --transform "s,^\\./,elle-$DESC/,"
+    - scp "$TARBALL" buildslave@packages.infinit.sh:tmp
+    - rm "$TARBALL"
+    - time "$SOURCE_DIR/buildenv" --cache-upload-build-tree --exclude='*.deb,*.rpm,*.tbz' --branch "$CI_BUILD_REF_NAME" --build-trees-root "/cache/$CI_PROJECT_NAME" --cache-namespace "$CI_RUNNER_DESCRIPTION/$CI_PROJECT_NAME" --cache-id "$CI_RUNNER_ID" --verbose
+  tags:
+    - x86_64
+    - alpine
+    - gcc
 
 # i386-jessie-gcc4:
 #   stage: build
