elle.Duration: use Howard Hinnant's date library
This library provide handy tools on top of std::chrono.  In particular
it provides I/O support.

Also, let's move to system_clock, as it's the proper type of clock for
serialization.

--- a/.gitmodules
+++ b/.gitmodules
@@ -26,3 +26,6 @@
 	path = src/elle/cryptography/modules/dopenssl
 	url = https://github.com/infinit/dopenssl
 	fetchRecurseSubmodules = false
+[submodule "src/elle/date"]
+	path = src/elle/date
+	url = https://github.com/HowardHinnant/date.git
